# smux

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  tarpaulin.toml
.github/workflows/: build.yml  coverage.yml
.kilocode/rules/: project.md
benches/: throughput.rs
fixtures/: go.mod  go_smux_client.go  go_smux_echo_server.go
specs/: 000-architecture.md  001-smux-spec.md  002-interface.md  003-frame.md  004-codec.md  005-session.md  006-stream.md  007-benchmarking.md  008-test-strategy.md
src/: codec.rs  command.rs  config.rs  error.rs  frame.rs  lib.rs  session.rs  stream.rs  stream_id.rs
tasks/: 01-error-system-config.md  02-frame-command-system.md  03-codec-implementation.md  04-session-implementation.md  05-stream-implementation.md  06-integration-tests.md  07-benchmarking.md  08-stream-lock-free-refactoring.md
tests/: e2e.rs  flow_control.rs  integration.rs  simple_interop.rs
wiki/: session-stream-lifecycle.md
