[package]
name = "smux"
version = "0.1.0"
authors = ["berry <iberryful@gmail.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/iberryful/smux"
homepage = "https://github.com/iberryful/smux"
description = "A smux implementation in Rust"

readme = "README.md"
categories = ["development-tools"]
keywords = []

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = [
    "rt",
    "rt-multi-thread",
    "tokio-macros",
    "macros",
    "net",
    "sync",
    "io-util",
] }
tokio-util = { version = "0.7", features = ["codec"] }
dashmap = "6.1.0"
futures = "0.3"
tracing = "0.1"
