[package]
name = "smux"
version = "0.2.0"
authors = ["berry <iberryful@gmail.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/smux"
repository = "https://github.com/iberryful/smux"
homepage = "https://github.com/iberryful/smux"
description = "A stream multiplexing library for Rust, compatible with the Go smux protocol"

readme = "README.md"
categories = ["network-programming", "asynchronous"]
keywords = ["multiplexing", "stream", "networking", "async", "smux"]

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = [
    "rt",
    "rt-multi-thread",
    "tokio-macros",
    "macros",
    "net",
    "sync",
    "io-util",
    "time",
    "process",
    "fs",
] }
tokio-util = { version = "0.7", features = ["codec"] }
dashmap = "6.1.0"
futures = "0.3"
tracing = "0.1"
flume = { version = "0.11.1", features = ["select", "async"] }

[dev-dependencies]
futures = "0.3"
port_check = "0.2"
serial_test = "3.2.0"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.bench]
debug = true


[[bench]]
name = "throughput"
harness = false
